keycloak/egress-keycloak.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-keycloak
  namespace: keycloak
spec:
  selector: app == 'keycloak'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: kubedb.com/name == 'keycloak-postgres'
        ports:
          - 5432
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 587
